=head1 Changes in 2.5.2

=over 2

=item *

Julien Elie has implemented in B<innd> the new version of the NNTP protocol
described in S<RFC 3977>, S<RFC 4643> and S<RFC 4644>.  Consequently, B<innd>
now recognizes the CAPABILITIES command.  Notwithstanding these standards,
three commands (IHAVE, CHECK and TAKETHIS) will continue, for interoperability
reasons, to return a reject code (respectively C<435>, C<438> and C<439>) when
the command contains a syntax error (which normally leads to C<501>).  Besides,
the mandatory username for authenticated peers will only be enforced by
S<INN 2.6.0>.

Major improvements are:

=over 2

=item *

B<innd> now has a decent parser for NNTP commands.  It permits to have a far
better grammar parser (commands like C<< IHAVEZ<><mid> >>, without a space between
the command and its argument, are no longer valid) and to allow leading and
trailing whitespaces in commands.  Besides, B<innd> checks the length of the
NNTP command sent by the client:  if the command contains more than 512 bytes
(or 497 bytes for an argument), an error is returned and the command is
discarded.  Note that after ten unrecognized commands, B<innd> closes the
connection with the appropriate code (C<400> instead of C<500>).

=item *

The output of the HELP command specifies the arguments expected by NNTP
commands, the same way as B<nnrpd> does.

=item *

LIST ACTIVE, LIST ACTIVE.TIMES and LIST NEWSGROUPS recognize an optional
argument:  a wildmat can now be specified to restrict the results of these
commands to specific newsgroups.

=item *

When using HEAD or STAT with an article number or a range, C<412> (no
group selected) is now returned instead of C<501> (syntax error).

=back

=item *

Jeffrey S<M. Vinocur> has implemented in both B<innd> and B<nnrpd>
support for whitespaces in usernames/passwords provided
with AUTHINFO USER/PASS.  They were previously considered
as invalid arguments, or wrongly parsed.  B<innd> and B<nnrpd> now treat