@@ -6,6 +6,8 @@
 #   innreport:  Perl script to summarize news log files
 #               (with optional HTML output and graphs).
 #
+# $Id$
+#
 # Version 3.1.0.
 #
 # Copyright (c) 1996-2001, Fabien Tassin <fta@sofaraway.org>.
